[tool.poetry]
name = "tricoder"
version = "1.3.1"
description = "TriVector Code Intelligence - Multi-view code relationship model with advanced semantic embeddings"
authors = ["Jiri Otoupal <j.f.otoupal@gmail.com>"]
readme = "README.md"
license = "Non-Commercial"
homepage = "https://github.com/jiri-otoupal/tricoder"
repository = "https://github.com/jiri-otoupal/tricoder"
keywords = ["code-intelligence", "embeddings", "semantic-analysis", "code-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
scikit-learn = ">=1.0.0"
gensim = ">=4.0.0"
annoy = ">=1.17.0"
click = ">=8.0.0"
rich = ">=13.0.0"
faiss-cpu = ">=1.7.0"
numba = ">=0.56.0"
cupy-cuda12x = {version = ">=12.0.0", optional = true, markers = "sys_platform != 'darwin'"}
torch = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[tool.poetry.scripts]
tricoder = "tricoder.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

